@@ -1,3 +1,7 @@
+Wed Jul  1 13:50:39 1998  Scott D. Heavner  <sdh@po.cwru.edu>
+
+	* curses.m4: add some docs and start using with tcd
+
 1998-06-29  Raja R Harinath  <harinath@cs.umn.edu>
 
 	* Makefile.am (MACROS): Add all the `.m4' files here.
